HostDiscardableSharedMemoryManager should store the default memory limit

OnMemoryStateChange() callback is invoked on the UI thread but we can't
call GetDefaultMemoryLimit() from the UI thread. Store the default limit
on construction.

BUG=652557

Review-Url: https://codereview.chromium.org/2388403002
Cr-Commit-Position: refs/heads/master@{#422700}

Former-commit-id: 738aeed44f1e6f1bdbc3bf2e34eeab91e9726888